// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/UserList renders user list correctly: header actions col props 1`] = `
Object {
  "children": Array [
    <Space
      style={
        Object {
          "float": "left",
          "marginBottom": 16,
        }
      }
    >
      <h5>
        <Input
          placeholder="Search"
          prefix={<ForwardRef(SearchOutlined) />}
          size="large"
          type="text"
        />
      </h5>
    </Space>,
    <Space
      style={
        Object {
          "float": "right",
          "marginBottom": 16,
        }
      }
    >
      <Button
        block={false}
        className="create-user"
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="primary"
      >
        <ForwardRef(PlusOutlined) />
        Add User
      </Button>
      <Divider
        type="vertical"
      />
      <ForwardRef(SettingOutlined) />
    </Space>,
    <Space>
      <Table
        columns={
          Array [
            Object {
              "dataIndex": "username",
              "ellipsis": true,
              "key": "username",
              "sortOrder": undefined,
              "sorter": [Function],
              "title": "Username",
            },
            Object {
              "dataIndex": "email",
              "ellipsis": true,
              "key": "email",
              "sortOrder": undefined,
              "sorter": [Function],
              "title": "Email",
            },
            Object {
              "dataIndex": "firstName",
              "ellipsis": true,
              "key": "firstName",
              "sortOrder": undefined,
              "sorter": [Function],
              "title": "First Name",
            },
            Object {
              "dataIndex": "lastName",
              "ellipsis": true,
              "key": "lastName",
              "sortOrder": undefined,
              "sorter": [Function],
              "title": "Last Name",
            },
            Object {
              "dataIndex": "actions",
              "key": "Actions",
              "render": [Function],
              "title": "Actions",
            },
          ]
        }
        dataSource={
          Array [
            Object {
              "email": "dubdabasoduba@gmail.com",
              "firstName": "Benjamin",
              "id": "97f36061-52fb-4474-88f2-fd286311ff1d",
              "key": "0",
              "lastName": "Mwalimu",
              "username": "mwalimu",
            },
            Object {
              "email": undefined,
              "firstName": "Ona",
              "id": "80385001-f385-42ec-8edf-8591dc181a54",
              "key": "1",
              "lastName": "kenya",
              "username": "ona",
            },
            Object {
              "email": "test@onatest.com",
              "firstName": "Ona",
              "id": "520b579e-70e9-4ae9-b1f8-0775c605b8d2",
              "key": "2",
              "lastName": "Admin",
              "username": "ona-admin",
            },
            Object {
              "email": undefined,
              "firstName": "Demo",
              "id": "cab07278-c77b-4bc7-b154-bcbf01b7d35b",
              "key": "3",
              "lastName": "kenya",
              "username": "opensrp",
            },
          ]
        }
        onChange={[Function]}
        pagination={
          Object {
            "defaultPageSize": 5,
            "pageSizeOptions": Array [
              "5",
              "10",
              "20",
              "50",
              "100",
            ],
            "showQuickJumper": true,
            "showSizeChanger": true,
          }
        }
        rowKey="key"
      />
    </Space>,
  ],
  "className": "bg-white p-3",
  "span": 24,
}
`;

exports[`components/UserList renders user list correctly: table props 1`] = `
Object {
  "columns": Array [
    Object {
      "dataIndex": "username",
      "ellipsis": true,
      "key": "username",
      "sortOrder": undefined,
      "sorter": [Function],
      "title": "Username",
    },
    Object {
      "dataIndex": "email",
      "ellipsis": true,
      "key": "email",
      "sortOrder": undefined,
      "sorter": [Function],
      "title": "Email",
    },
    Object {
      "dataIndex": "firstName",
      "ellipsis": true,
      "key": "firstName",
      "sortOrder": undefined,
      "sorter": [Function],
      "title": "First Name",
    },
    Object {
      "dataIndex": "lastName",
      "ellipsis": true,
      "key": "lastName",
      "sortOrder": undefined,
      "sorter": [Function],
      "title": "Last Name",
    },
    Object {
      "dataIndex": "actions",
      "key": "Actions",
      "render": [Function],
      "title": "Actions",
    },
  ],
  "dataSource": Array [
    Object {
      "email": "dubdabasoduba@gmail.com",
      "firstName": "Benjamin",
      "id": "97f36061-52fb-4474-88f2-fd286311ff1d",
      "key": "0",
      "lastName": "Mwalimu",
      "username": "mwalimu",
    },
    Object {
      "email": undefined,
      "firstName": "Ona",
      "id": "80385001-f385-42ec-8edf-8591dc181a54",
      "key": "1",
      "lastName": "kenya",
      "username": "ona",
    },
    Object {
      "email": "test@onatest.com",
      "firstName": "Ona",
      "id": "520b579e-70e9-4ae9-b1f8-0775c605b8d2",
      "key": "2",
      "lastName": "Admin",
      "username": "ona-admin",
    },
    Object {
      "email": undefined,
      "firstName": "Demo",
      "id": "cab07278-c77b-4bc7-b154-bcbf01b7d35b",
      "key": "3",
      "lastName": "kenya",
      "username": "opensrp",
    },
  ],
  "onChange": [Function],
  "pagination": Object {
    "defaultPageSize": 5,
    "pageSizeOptions": Array [
      "5",
      "10",
      "20",
      "50",
      "100",
    ],
    "showQuickJumper": true,
    "showSizeChanger": true,
  },
  "rowKey": "key",
}
`;

exports[`components/UserList renders user list correctly: user list props 1`] = `
Object {
  "accessToken": "simple-token",
  "extraData": Object {
    "api_token": "hunter2",
    "oAuth2Data": Object {
      "access_token": "simple-token",
      "state": "abcde",
    },
  },
  "fetchKeycloakUsersCreator": [Function],
  "keycloakBaseURL": "https://keycloak-stage.smartregister.org/auth/admin/realms/opensrp-web-stage",
  "keycloakUsers": Array [
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1600843525533,
      "disableableCredentialTypes": Array [],
      "email": "dubdabasoduba@gmail.com",
      "emailVerified": false,
      "enabled": true,
      "firstName": "Benjamin",
      "id": "97f36061-52fb-4474-88f2-fd286311ff1d",
      "lastName": "Mwalimu",
      "notBefore": 0,
      "requiredActions": Array [
        "UPDATE_PASSWORD",
      ],
      "totp": false,
      "username": "mwalimu",
    },
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1600156374050,
      "disableableCredentialTypes": Array [],
      "emailVerified": false,
      "enabled": true,
      "firstName": "Ona",
      "id": "80385001-f385-42ec-8edf-8591dc181a54",
      "lastName": "kenya",
      "notBefore": 0,
      "requiredActions": Array [],
      "totp": false,
      "username": "ona",
    },
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1599565616551,
      "disableableCredentialTypes": Array [],
      "email": "test@onatest.com",
      "emailVerified": false,
      "enabled": true,
      "firstName": "Ona",
      "id": "520b579e-70e9-4ae9-b1f8-0775c605b8d2",
      "lastName": "Admin",
      "notBefore": 1600329648,
      "requiredActions": Array [],
      "totp": false,
      "username": "ona-admin",
    },
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1600156317992,
      "disableableCredentialTypes": Array [],
      "emailVerified": false,
      "enabled": true,
      "firstName": "Demo",
      "id": "cab07278-c77b-4bc7-b154-bcbf01b7d35b",
      "lastName": "kenya",
      "notBefore": 0,
      "requiredActions": Array [],
      "totp": false,
      "username": "opensrp",
    },
  ],
  "removeKeycloakUsersCreator": [Function],
  "serviceClass": [Function],
}
`;

exports[`components/UserList works correctly with store: user list props 1`] = `
Object {
  "accessToken": "simple-token",
  "extraData": Object {
    "api_token": "hunter2",
    "oAuth2Data": Object {
      "access_token": "simple-token",
      "state": "abcde",
    },
  },
  "fetchKeycloakUsersCreator": [Function],
  "keycloakBaseURL": "https://keycloak-stage.smartregister.org/auth/admin/realms/opensrp-web-stage",
  "keycloakUsers": Array [
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1600843525533,
      "disableableCredentialTypes": Array [],
      "email": "dubdabasoduba@gmail.com",
      "emailVerified": false,
      "enabled": true,
      "firstName": "Benjamin",
      "id": "97f36061-52fb-4474-88f2-fd286311ff1d",
      "lastName": "Mwalimu",
      "notBefore": 0,
      "requiredActions": Array [
        "UPDATE_PASSWORD",
      ],
      "totp": false,
      "username": "mwalimu",
    },
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1600156374050,
      "disableableCredentialTypes": Array [],
      "emailVerified": false,
      "enabled": true,
      "firstName": "Ona",
      "id": "80385001-f385-42ec-8edf-8591dc181a54",
      "lastName": "kenya",
      "notBefore": 0,
      "requiredActions": Array [],
      "totp": false,
      "username": "ona",
    },
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1599565616551,
      "disableableCredentialTypes": Array [],
      "email": "test@onatest.com",
      "emailVerified": false,
      "enabled": true,
      "firstName": "Ona",
      "id": "520b579e-70e9-4ae9-b1f8-0775c605b8d2",
      "lastName": "Admin",
      "notBefore": 1600329648,
      "requiredActions": Array [],
      "totp": false,
      "username": "ona-admin",
    },
    Object {
      "access": Object {
        "impersonate": false,
        "manage": true,
        "manageGroupMembership": true,
        "mapRoles": true,
        "view": true,
      },
      "createdTimestamp": 1600156317992,
      "disableableCredentialTypes": Array [],
      "emailVerified": false,
      "enabled": true,
      "firstName": "Demo",
      "id": "cab07278-c77b-4bc7-b154-bcbf01b7d35b",
      "lastName": "kenya",
      "notBefore": 0,
      "requiredActions": Array [],
      "totp": false,
      "username": "opensrp",
    },
  ],
  "removeKeycloakUsersCreator": [Function],
  "serviceClass": [Function],
}
`;
